Web/content/materialDesignComponents.css
.contactChips md-content.autocomplete {
  z-index:25;
  min-height: 100px; 
}

.modal{
    z-index: 20;   
}

.modal-backdrop{
    z-index: 10;        
}


.contactChips md-item-image {
    padding-top: -20px
}

.card {
 width: 65%;
 height:auto;
 background-color:white;
 border-radius: 4px;
}

.feedCard .face {
    border-radius: 30px;
    border: 1px solid #ddd;
    width: 48px;
    margin: 16px;
}

.speed-dial {
    position: absolute;
}

.addition-modal {
    width:400px;
    padding:15px
}

